--- a/app/Resources/SyliusShopBundle/views/Account/AddressBook/_item.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Account/AddressBook/_item.html.twig
@@ -1,6 +1,8 @@
 {% import '@SyliusShop/Ui/Macro/buttons.html.twig' as buttons %}
 
-{% include '@SyliusShop/Common/_address.html.twig' with {'address': address} %}
-{{ buttons.edit(path('sylius_shop_account_address_book_update', {'id': address.id})) }}
-{{ render(path('sylius_shop_account_address_book_set_as_default', {'id': address.id})) }}
-{{ buttons.delete(path('sylius_shop_account_address_book_delete', {'id': address.id}), null, true, address.id) }}
+<div class="address">
+    {% include '@SyliusShop/Common/_address.html.twig' with {'address': address} %}
+    {{ buttons.edit(path('sylius_shop_account_address_book_update', {'id': address.id})) }}
+    {{ render(path('sylius_shop_account_address_book_set_as_default', {'id': address.id})) }}
+    {{ buttons.delete(path('sylius_shop_account_address_book_delete', {'id': address.id}), null, true, address.id) }}
+</div>
