--- a/app/Resources/SyliusShopBundle/views/Menu/_security.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Menu/_security.html.twig
@@ -1,3 +1,4 @@
+<div class="right menu">
 {% if is_granted('ROLE_USER') %}
     <div class="item">{{ 'sylius.ui.hello'|trans }} {{ app.user.customer.fullName }}!</div>
     <a href="{{ path('sylius_shop_account_dashboard') }}">{{ 'sylius.ui.my_account'|trans }}</a>
@@ -6,3 +7,4 @@
     <a href="{{ path('sylius_shop_login') }}">{{ 'sylius.ui.login'|trans }}</a>
     <a href="{{ path('sylius_shop_register') }}">{{ 'sylius.ui.register'|trans }}</a>
 {% endif %}
+</div>
