--- a/app/Resources/SyliusShopBundle/views/_header.html.twig
+++ b/app/Resources/SyliusShopBundle/views/_header.html.twig
@@ -1,3 +1,3 @@
-<a href="{{ path('sylius_shop_homepage') }}"><img src="{{ asset('assets/shop/img/logo.png') }}" alt="Sylius logo"></a>
+<a href="{{ path('sylius_shop_homepage') }}">{{ 'sylius.ui.home'|trans }}</a>
 {{ sonata_block_render_event('sylius.shop.layout.header') }}
 {{ render(url('sylius_shop_partial_cart_summary', {'template': '@SyliusShop/Cart/_widget.html.twig'})) }}
