--- a/app/Resources/SyliusShopBundle/views/Account/AddressBook/_item.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Account/AddressBook/_item.html.twig
@@ -1,13 +1,13 @@
 {% import '@SyliusShop/Ui/Macro/buttons.html.twig' as buttons %}
 
 <div class="address">
-    <div>
+
+    {% include '@SyliusShop/Common/_address.html.twig' with {'address': address} %}
+
+
+    <div style="margin: 400px;">
         {{ buttons.edit(path('sylius_shop_account_address_book_update', {'id': address.id})) }}
         {{ render(path('sylius_shop_account_address_book_set_as_default', {'id': address.id})) }}
         {{ buttons.delete(path('sylius_shop_account_address_book_delete', {'id': address.id}), null, true, address.id) }}
-    </div>
-    <br/>
-    <div>
-        {% include '@SyliusShop/Common/_address.html.twig' with {'address': address} %}
     </div>
 </div>
